--- a/luna/assets/css/style.css
+++ b/luna/assets/css/style.css
@@ -2,6 +2,83 @@
     margin: none;
     padding: none;
     background-image: url(../img/back-1.jpg);
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
+}
+
+.footer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    height: 100px;
+    width: 100%;
+}
+
+.menu .open-menu {
+    display: none;
+}
+
+.backdrop {
+    display: none;
+}
+
+.links:hover {
+    text-decoration: none;
+    color: #FFF;
+}
+
+@media(max-width: 450px) {
+    .menu.open .backdrop {
+        opacity: .5;
+        display: block;
+    }
+    .menu .backdrop {
+        opacity: 0;
+        background-color: #000;
+        transition: opacity .15s linear;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        z-index: 1;
+        left: 0;
+        top: 0;
+    }
+    header .header-border {
+        justify-content: space-between;
+    }
+    .menu ul {
+        display: block;
+        position: fixed;
+        top: 0;
+        right: -80vw;
+        width: 80vw;
+        height: 100vh;
+        background-color: #fff;
+        z-index: 2;
+        margin: 0;
+        transition: right .2s linear;
+    }
+    .menu.open ul {
+        right: 0;
+    }
+    .menu.open a {
+        color: #000;
+        padding: 20px;
+        display: block;
+        font-weight: 100;
+        border-bottom: #ccc 1px solid;
+    }
+    .menu {
+        width: 60px;
+        flex: initial;
+    }
+    .menu .open-menu {
+        display: block;
+        font-size: 2em;
+        padding: .9rem;
+        flex: 1;
+        background: none;
+        border: none;
+        color: #fff;
+    }
 }
